--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ java {
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
@@ -23,6 +24,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'com.mongo.hibernate:mongo-hibernate:1.0.0'
+    implementation 'org.hibernate.orm:hibernate-core:6.6.0.Final'
 }
 
 tasks.named('test') {
