--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'com.mongo.hibernate:mongo-hibernate:1.0.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.5.4'
     implementation 'org.hibernate.orm:hibernate-core:6.6.0.Final'
 }
 
