--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.mongodb:mongodb-hibernate:1.0.0-SNAPSHOT'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.5.4'
-    implementation 'org.hibernate.orm:hibernate-core:6.6.0.Final'
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa:3.5.0')
 }
+
+
 
 tasks.named('test') {
     useJUnitPlatform()
